Fixed responsiveness issue in EventDetails prevent overlap between page content and footer

--- a/src/pages/styles/EventDetails.css
+++ b/src/pages/styles/EventDetails.css
@@ -2,7 +2,7 @@
     width:100%;
     padding: 0px 20px 20px 20px;
     font-weight:300;
-    height:calc(100vh - 80px);
+    /*height:calc(100vh - 80px);*/
 }
 
 #eventName {
